syntax = "proto3";

package models;

message HeartBeat{
    bytes peer_id = 1;
    int64  timeStamp = 2;
}

message FindNode{
    bytes  peer_id    = 1;
    int32  peer_count = 2;
}

message FindNodeResponse {
    bytes   peer_id = 1;
    repeated PeerInfo peerlist = 2;
}

message PeerInfo {
    bytes peer_id = 1;
    string addr    = 2;
    int64  timeStamp = 3;  
}

message FindValue {
    bytes key = 1;
    int32 leve = 2;
}

message FindValueResponse {
    bytes key = 1;
    int32 leve = 2;
    repeated PeerInfo peerlist = 3;
    repeated PeerInfo nearpeerlist = 4;
}